# django-cart

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README  README.md  pyproject.toml  runtests.py  setup.py  sonar-project.properties  tox.ini
.claude/rules/: coding_guidelines.md  preferences.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
cart/: __init__.py  admin.py  apps.py  cart.py  context_processors.py  inventory.py  middleware.py  models.py  session.py  shipping.py  signals.py  tax.py  tests.py
cart/management/commands/: clean_carts.py
cart/migrations/: 0001_initial.py  0002_add_unit_price_validator.py  0003_add_user_fk.py  0004_add_item_indexes.py  0005_add_discount_model.py  0006_indexes_and_quantity_validator.py
cart/templatetags/: __init__.py  cart_tags.py
docs/: AGENTS.md  ANALYSIS.md  PROJECT_ANALYSIS.md  PROJECT_ANALYSIS_2026_03_29_0243am.md  ROADMAP.md  ROADMAP_2026_04.md
project/: settings.py  urls.py  wsgi.py
tests/: README.md  conftest.py  settings.py  settings_custom_user.py  test_cart.py  test_cart_add.py  test_cart_admin.py  test_cart_atomic.py  test_cart_bulk.py  test_cart_caching.py  test_cart_checkout.py  test_cart_custom_user.py  test_cart_discounts.py  test_cart_init.py  test_cart_iteration.py  test_cart_max_quantity.py  test_cart_merge.py  test_cart_model.py  test_cart_price_validation.py  test_cart_query.py  test_cart_remove.py  test_cart_serialization.py  test_cart_tax_shipping.py  test_cart_update.py  test_cart_user_binding.py  test_clean_carts_command.py  test_conftest.py  test_cookie_session_middleware.py  test_discount_model.py  test_http_integration.py  test_integration.py  test_inventory.py  test_item_manager.py  test_item_model.py  test_performance.py  test_readme.py  test_session.py  test_session_adapters.py  test_shipping.py  test_signals.py  (+4 more)
tests/custom_user_app/: apps.py  models.py
tests/custom_user_app/migrations/: 0001_initial.py
tests/fixtures/: fake_products.json
tests/test_app/: models.py  views.py
tests/test_app/migrations/: 0001_initial.py  0002_fakeproductnoprice.py
