[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-cart"
version = "3.0.14"
authors = [
  { name="Bruno Mentges de Carvalho", email="bruno@mentgesinformatica.com.br" },
]
description = "A simple session-backed shopping cart for modern Django."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "Django>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-django>=4.8",
    "coverage[toml]>=7",
]

# --------------------------------------------------------------------------- #
# pytest configuration
# --------------------------------------------------------------------------- #
# python_classes = [] rejects any class-based test collection — the P-1
# overhaul retired all TestCase subclasses. If a future PR accidentally
# adds one, it will be silently ignored rather than run, which makes the
# collection count mismatch loud in review.
#
# filterwarnings = ["error"] is intentionally NOT set: upstream Django
# and Python emit DeprecationWarnings that are outside our control
# (e.g. asyncio.iscoroutinefunction under Py3.16, USE_TZ default shift
# on older Django). Promoting those to errors would make CI brittle
# against unrelated platform noise.

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = []
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "slow: tests that take noticeable wall time (deselect with '-m \"not slow\"')",
]

# --------------------------------------------------------------------------- #
# Coverage configuration
# --------------------------------------------------------------------------- #
# `fail_under = 90` acts as a local caution line — `coverage report`
# exits non-zero if coverage drops below 90% on a developer's machine.
# CI does NOT run `coverage report`, so this is advisory, never a
# blocker. Current coverage is ~98%; the 8% buffer leaves room for
# legitimate churn without needing to fiddle with the threshold.

[tool.coverage.run]
source = ["cart"]
branch = true
omit = [
    "*/migrations/*",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
fail_under = 90

[tool.coverage.html]
directory = "htmlcov"
