[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-cart"
version = "3.0.14"
authors = [
  { name="Bruno Mentges de Carvalho", email="bruno@mentgesinformatica.com.br" },
]
description = "A simple session-backed shopping cart for modern Django."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "Django>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-django>=4.8",
    "coverage[toml]>=7",
    "django-stubs[compatible-mypy]>=5.1",
]

# --------------------------------------------------------------------------- #
# pytest configuration
# --------------------------------------------------------------------------- #
# python_classes = [] rejects any class-based test collection — the P-1
# overhaul retired all TestCase subclasses. If a future PR accidentally
# adds one, it will be silently ignored rather than run, which makes the
# collection count mismatch loud in review.
#
# filterwarnings = ["error"] is intentionally NOT set: upstream Django
# and Python emit DeprecationWarnings that are outside our control
# (e.g. asyncio.iscoroutinefunction under Py3.16, USE_TZ default shift
# on older Django). Promoting those to errors would make CI brittle
# against unrelated platform noise.

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = []
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "slow: tests that take noticeable wall time (deselect with '-m \"not slow\"')",
]

# --------------------------------------------------------------------------- #
# Coverage configuration
# --------------------------------------------------------------------------- #
# `fail_under = 90` acts as a local caution line — `coverage report`
# exits non-zero if coverage drops below 90% on a developer's machine.
# CI does NOT run `coverage report`, so this is advisory, never a
# blocker. Current coverage is ~98%; the 8% buffer leaves room for
# legitimate churn without needing to fiddle with the threshold.

[tool.coverage.run]
source = ["cart"]
branch = true
omit = [
    "*/migrations/*",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
fail_under = 90

[tool.coverage.html]
directory = "htmlcov"

# --------------------------------------------------------------------------- #
# mypy configuration
# --------------------------------------------------------------------------- #
# Type-checking scope:
# - ``cart/`` is the typed surface (the public API).
# - ``tests/`` is deliberately excluded — test code is signal-light for
#   type-check cost (lots of assertions and dynamic fixtures). A follow-up
#   PR can opt in if the value becomes clear.
# - Runs on a single cell (Py3.12 × Django 5.1) via pre-commit's
#   additional_dependencies pin. django-stubs is tied to specific Django
#   minors and the type-check signal barely varies across the rest of the
#   test matrix, so one cell is the industry-standard tradeoff.
# - ``strict = false`` at first — a pragmatic starting point. Individual
#   tightenings (strict_equality, warn_unused_ignores) ratchet in
#   follow-ups. ``check_untyped_defs = true`` is the one strict-adjacent
#   setting that catches real bugs cheaply.

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
strict = false
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_reexport = false
exclude = [
    "^tests/",
    "^build/",
    "^dist/",
    "^.venv/",
    "^.*/migrations/.*",
]

[tool.django-stubs]
django_settings_module = "tests.settings"
